--- a/index.html
+++ b/index.html
@@ -14,37 +14,40 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
-<!-- ======== SEO + SOCIAL META TAGS ======== -->
+  <!-- ======== SEO + SOCIAL META TAGS ======== -->
 
-<title>SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</title>
-<meta name="description" content="Sasha Cheek — Technical Program Manager, API integration specialist, and science writer. Explore my portfolio of technical projects, data visualizations, and published writing.">
-<meta name="keywords" content="Sasha Cheek, API Integration, Technical Program Manager, Science Writer, Data Visualization, Tech Portfolio, Systems Integration, Technical Consulting, Science Communication, Cyberpunk Portfolio">
-<meta name="author" content="Sasha Cheek">
+  <title>SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</title>
+  <meta name="description"
+    content="Sasha Cheek — Technical Program Manager, API integration specialist, and science writer. Explore my portfolio of technical projects, data visualizations, and published writing.">
+  <meta name="keywords"
+    content="Sasha Cheek, API Integration, Technical Program Manager, Science Writer, Data Visualization, Tech Portfolio, Systems Integration, Technical Consulting, Science Communication, Cyberpunk Portfolio">
+  <meta name="author" content="Sasha Cheek">
 
-<!-- Open Graph (Facebook, LinkedIn, etc.) -->
-<meta property="og:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
-<meta property="og:description" content="Explore my work in API integration, tech consulting, and science communication.">
-<meta property="og:image" content="https://sashacheek.com/assets/img/preview-card.png">
-<meta property="og:url" content="https://sashacheek.com">
-<meta property="og:type" content="website">
+  <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
+  <meta property="og:description"
+    content="Explore my work in API integration, tech consulting, and science communication.">
+  <meta property="og:image" content="https://sashacheek.com/assets/img/preview-card.png">
+  <meta property="og:url" content="https://sashacheek.com">
+  <meta property="og:type" content="website">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
-<meta name="twitter:description" content="Explore my portfolio in technical systems and science writing.">
-<meta name="twitter:image" content="https://sashacheek.com/assets/img/preview-card.png">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
+  <meta name="twitter:description" content="Explore my portfolio in technical systems and science writing.">
+  <meta name="twitter:image" content="https://sashacheek.com/assets/img/preview-card.png">
 
-<!-- Canonical URL -->
-<link rel="canonical" href="https://sashacheek.com/">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://sashacheek.com/">
 
-<!-- Robots + Indexing -->
-<meta name="robots" content="index, follow">
+  <!-- Robots + Indexing -->
+  <meta name="robots" content="index, follow">
 
-<!-- Favicon -->
+  <!-- Favicon -->
 
-<link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<!-- ======== END SEO + SOCIAL ======== -->
+  <!-- ======== END SEO + SOCIAL ======== -->
 
   <!-- Bootstrap & Animate.css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -115,7 +118,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">SASHA CHEEK | TECH PROGRAM MANAGER<br>& SCIENCE WRITER</h1>
+        <h1 class="sitename">SASHA CHEEK |<br>TECH PM &<br>SCIENCE<br>WRITER</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -123,8 +126,9 @@
           <li><a href="#hero" class="active">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#resume">RESUME</a></li>
+          <li><a href="#blog">BLOG</a></li>
+          <li><a href="#writing">PUBLISHED WORK</a></li>
           <li><a href="#portfolio">TECH PORTFOLIO</a></li>
-          <li><a href="#writing">WRITING</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -344,6 +348,195 @@
     </section>
     <!-- /Resume Section -->
 
+    <!-- Notes from the Sandbox Blog Section -->
+    <section id="blog" class="blog section-black py-5">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h1>NOTES FROM THE SANDBOX:<br><i>A Writer-Engineer's Log</i></h1>
+        <h2 class="framed-subtitle">Tracing my beginnings as a writer-engineer—learning out loud, one build and
+          paragraph at
+          a time.</h2>
+      </div>
+      <!-- End Section Subtitle -->
+
+      <!-- Slider Subsection -->
+      <section id="slider" class="slider section-black">
+
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="swiper init-swiper">
+
+            <script type="application/json" class="swiper-config">
+            {
+              "loop": true,
+              "speed": 600,
+              "autoplay": {
+                "delay": 5000
+              },
+              "slidesPerView": "auto",
+              "centeredSlides": true,
+              "pagination": {
+                "el": ".swiper-pagination",
+                "type": "bullets",
+                "clickable": true
+              },
+              "navigation": {
+                "nextEl": ".swiper-button-next",
+                "prevEl": ".swiper-button-prev"
+              }
+            }
+          </script>
+
+            <div class="swiper-wrapper">
+
+              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-1.PNG');">
+                <div class="content">
+                  <h2><a href="#" data-comingsoon>Random Notes From an Emerging Writer's Desk</a></h2>
+                  <p>Release Date: Oct 20, 2025</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-2.PNG');">
+                <div class="content">
+                  <h2><a href="#" data-comingsoon>Blog Entry 2 - TBA</a></h2>
+                  <p>Release Date: Oct 27, 2025</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-3.PNG');">
+                <div class="content">
+                  <h2><a href="#" data-comingsoon>Blog Entry 3 - TBA</a></h2>
+                  <p>Release Date: Nov 3, 2025</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-3.PNG');">
+                <div class="content">
+                  <h2><a href="#" data-comingsoon>Blog Entry 4 - TBA</a></h2>
+                  <p>Release Date: Nov 10, 2025</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+
+            <div class="swiper-pagination"></div>
+          </div>
+
+        </div>
+
+      </section><!-- /Slider Subsection -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row justify-content-center">
+          <!-- ARTICLE CARD 1 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://images.pexels.com/photos/5827785/pexels-photo-5827785.jpeg?w=1920" alt="Blog Entry 1"
+                class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Blog Entry 1</h4>
+                <p class="article-date">Coming Soon</p>
+                <a href="https://example.com/coming-soon" class="btn btn-neon block-for-now" aria-disabled="true"
+                  data-comingsoon>Coming Soon</a>
+
+              </div>
+            </div>
+          </div>
+
+          <!-- ARTICLE CARD 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://images.pexels.com/photos/1425146/pexels-photo-1425146.jpeg?w=1920" alt="Blog Entry 2"
+                class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Blog Entry 2</h4>
+                <p class="article-date">Coming Soon</p>
+                <a href="https://example.com/coming-soon" class="btn btn-neon block-for-now" aria-disabled="true"
+                  data-comingsoon>Coming Soon</a>
+
+              </div>
+            </div>
+          </div>
+
+          <!-- ARTICLE CARD 3 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://cdn.pixabay.com/photo/2016/11/22/21/26/notebook-1850613_1280.jpg" alt="Blog Entry 3"
+                class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Blog Entry 3</h4>
+                <p class="article-date">Coming Soon</p>
+                <a href="https://example.com/coming-soon" class="btn btn-neon block-for-now" aria-disabled="true"
+                  data-comingsoon>Coming Soon</a>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Notes from the Sandbox Blog Section -->
+
+    <!-- Featured Writing Section -->
+    <section id="writing" class="writing section-black py-5">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h1>PUBLISHED WORK</h1>
+        <h2 class="framed-subtitle">Published work in science and technology.</h2>
+      </div>
+      <!-- Featured Writing Container -->
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row justify-content-center">
+          <!-- ARTICLE CARD 1 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png"
+                alt="David Bowie’s Ode to Sci-Fi" class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
+                <p class="article-date">Published on Medium</p>
+                <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
+                  target="_blank" class="btn btn-neon">Read Article</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ARTICLE CARD 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN" alt="Automated Love"
+                class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
+                <p class="article-date">Published on Medium</p>
+                <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
+                  target="_blank" class="btn btn-neon">Read Article</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ARTICLE CARD 3 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz"
+                alt="Dealing with Alzheimer’s" class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
+                <p class="article-date">Published on Medium</p>
+                <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
+                  target="_blank" class="btn btn-neon">Read Article</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Featured Writing Section -->
+
     <!-- Tech Portfolio Section -->
     <section id="portfolio" class="portfolio section-black" data-aos="fade-in">
 
@@ -403,63 +596,6 @@
         </div>
 
       </section><!-- End Tech Portfolio Section -->
-
-      <!-- Writing Section -->
-      <section id="writing" class="writing section-black py-5">
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h1>WRITING</h1>
-          <h2 class="framed-subtitle">Recent published work on Medium — expand to preview each article.</h2>
-        </div>
-        <!-- Blog Container -->
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="row justify-content-center">
-            <!-- ARTICLE CARD 1 -->
-            <div class="col-md-4 mb-4">
-              <div class="article-card">
-                <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png"
-                  alt="David Bowie’s Ode to Sci-Fi" class="article-img">
-                <div class="article-content">
-                  <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
-                  <p class="article-date">Published on Medium</p>
-                  <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
-                    target="_blank" class="btn btn-neon">Read Article</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- ARTICLE CARD 2 -->
-            <div class="col-md-4 mb-4">
-              <div class="article-card">
-                <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN"
-                  alt="Automated Love" class="article-img">
-                <div class="article-content">
-                  <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
-                  <p class="article-date">Published on Medium</p>
-                  <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
-                    target="_blank" class="btn btn-neon">Read Article</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- ARTICLE CARD 3 -->
-            <div class="col-md-4 mb-4">
-              <div class="article-card">
-                <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz"
-                  alt="Dealing with Alzheimer’s" class="article-img">
-                <div class="article-content">
-                  <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
-                  <p class="article-date">Published on Medium</p>
-                  <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
-                    target="_blank" class="btn btn-neon">Read Article</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Writing Section -->
 
       <!-- Testimonials Section -->
       <section id="testimonials" class="testimonials section-black" data-aos="fade-in">
@@ -679,49 +815,58 @@
     });
   </script>
 
-<!-- ======= Contact Section JS Script ======= -->
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById('contact-form');
-    if (!form) return;
+  <!-- ======= Contact Section JS Script ======= -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById('contact-form');
+      if (!form) return;
 
-    const loading = form.querySelector('.loading');
-    const errorMessage = form.querySelector('.error-message');
-    const sentMessage = form.querySelector('.sent-message');
+      const loading = form.querySelector('.loading');
+      const errorMessage = form.querySelector('.error-message');
+      const sentMessage = form.querySelector('.sent-message');
 
-    form.addEventListener('submit', async function (e) {
-      e.preventDefault(); // stop redirect
-      loading.style.display = 'block';
-      errorMessage.style.display = 'none';
-      sentMessage.style.display = 'none';
+      form.addEventListener('submit', async function (e) {
+        e.preventDefault(); // stop redirect
+        loading.style.display = 'block';
+        errorMessage.style.display = 'none';
+        sentMessage.style.display = 'none';
 
-      const formData = new FormData(form);
+        const formData = new FormData(form);
 
-      try {
-        const response = await fetch(form.action, {
-          method: 'POST',
-          body: formData,
-          headers: { 'Accept': 'application/json' }
-        });
+        try {
+          const response = await fetch(form.action, {
+            method: 'POST',
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+          });
 
-        loading.style.display = 'none';
+          loading.style.display = 'none';
 
-        if (response.ok) {
-          sentMessage.style.display = 'block';
-          sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
-          form.reset();
-        } else {
-          errorMessage.textContent = "Oops! There was a problem submitting your form.";
+          if (response.ok) {
+            sentMessage.style.display = 'block';
+            sentMessage.style.animation = 'neonPulse 1.5s infinite alternate';
+            form.reset();
+          } else {
+            errorMessage.textContent = "Oops! There was a problem submitting your form.";
+            errorMessage.style.display = 'block';
+          }
+        } catch (error) {
+          loading.style.display = 'none';
+          errorMessage.textContent = "Network error — please try again later.";
           errorMessage.style.display = 'block';
         }
-      } catch (error) {
-        loading.style.display = 'none';
-        errorMessage.textContent = "Network error — please try again later.";
-        errorMessage.style.display = 'block';
-      }
+      });
     });
-  });
+  </script>
+
+<!-- For Coming Soon Blog Entries -->
+  <script>
+document.addEventListener('click', e => {
+  const el = e.target.closest('[data-comingsoon]');
+  if (el){ e.preventDefault(); }
+});
 </script>
+
 
 </body>
 
