--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </div>
             </div>
             <div class="col-lg-7 content">
-              <h2>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to
+              <h2>Sasha Cheek is a tech program manager and freelance science writer, with a hunger to
                 demystify engineering and science through storytelling.</h2>
               <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and
@@ -437,7 +437,7 @@
               <img src="https://images.pexels.com/photos/5827785/pexels-photo-5827785.jpeg?w=1920" alt="Blog Entry 1"
                 class="article-img">
               <div class="article-content">
-                <h4 class="article-title">Blog Entry 1</h4>
+                <h4 class="article-title">Random Notes From an Emerging Writer's Desk</h4>
                 <p class="article-date">Coming Soon</p>
                 <a href="https://example.com/coming-soon" class="btn btn-neon block-for-now" aria-disabled="true"
                   data-comingsoon>Coming Soon</a>
