--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
 
             <div class="swiper-wrapper">
 
-              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-1.PNG');">
+              <div class="swiper-slide" style="background-image: url('assets/img/blog/pic3-blog-01.jpg');">
                 <div class="content">
-                  <h2><a href="#" data-comingsoon>Random Notes From an Emerging Writer's Desk</a></h2>
-                  <p>Release Date: Oct 23, 2025</p>
+                  <h2><a href="/blog/2025-10-23-random-notes.html">Random Notes From an Emerging Writer's Desk</a></h2>
+                  <p>Oct 23, 2025</p>
                 </div>
               </div>
 
@@ -438,9 +438,8 @@
                 class="article-img">
               <div class="article-content">
                 <h4 class="article-title">Random Notes From an Emerging Writer's Desk</h4>
-                <p class="article-date">Coming Soon</p>
-                <a href="https://example.com/coming-soon" class="btn btn-neon block-for-now" aria-disabled="true"
-                  data-comingsoon>Coming Soon</a>
+                <p class="article-date">Oct 23, 2025</p>
+                <a href="/blog/2025-10-23-random-notes.html" class="btn btn-neon">Read Article</a>
 
               </div>
             </div>
